Add painting images to backend resources for production